<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="4dp"
        android:paddingRight="4dp" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/course_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/course_code_label"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/course_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/course_name_label" />
            
            <CheckBox 
                android:id="@+id/course_gradable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/course_gradable"/>
        </LinearLayout>
        
        <View 
            android:id="@+id/course_colour"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"/>
        
    </LinearLayout>
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@android:id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/no_activity_message" />

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>
    
    <Button 
        android:id="@+id/create_activity_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:drawableLeft="@android:drawable/ic_menu_add"
        android:text="@string/add_activity_button"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>