<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical" >

        <EditText
            android:id="@+id/activity_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_name_label" />

        <EditText
            android:id="@+id/activity_super_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_name_label" />

        <EditText
            android:id="@+id/activity_location_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_location_label" />
        
        <LinearLayout 
            android:layout_marginLeft="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reminder_label"/>
            
            <EditText 
                android:id="@+id/activity_reminder"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="number"/>
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_before"/>
            
            <CheckBox 
                android:id="@+id/reminder_default_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reminder_default"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
        
        <CheckBox 
            android:id="@+id/activity_for_marks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_for_marks"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/activity_recurrence_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="4dp"
                android:text="@string/activity_recurrence_label" />

            <Spinner
                android:id="@+id/activity_recurrence_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TableRow
            android:id="@+id/activity_days_row1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/activity_days_row2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <LinearLayout
            android:id="@+id/activity_date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/activity_date_label" />

            <DatePicker
                android:id="@+id/activity_datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:calendarViewShown="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/activity_start_time_label" />

            <net.givreardent.sam.sss.util.ScrollProofTimePicker
                android:id="@+id/activity_start_timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/activity_end_time_label" />

            <net.givreardent.sam.sss.util.ScrollProofTimePicker
                android:id="@+id/activity_end_timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="20dp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>