<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <EditText 
            android:id="@+id/create_break_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/break_name_hint"/>
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/break_start"/>
            
            <net.givreardent.sam.sss.util.ScrollProofDatePicker 
                android:id="@+id/break_start_DatePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:gravity="right"/>
            
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/break_end"/>
            
            <net.givreardent.sam.sss.util.ScrollProofDatePicker 
                android:id="@+id/break_end_DatePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:gravity="right"/>
            
        </LinearLayout>
    </LinearLayout>
    

</ScrollView>
